--- a/index.html
+++ b/index.html
@@ -14,16 +14,24 @@
     <link rel="stylesheet" href="./terminal.css">
 </head>
 <body>
-    <menu>
-        <button class="terminalButton">
-            <img src="https://camo.githubusercontent.com/12561cf74eda103dcb2bedafe0a89a693b6443039fe850a0b5414c221f2c4a05/68747470733a2f2f75706c6f61642e766563746f726c6f676f2e7a6f6e652f6c6f676f732f6769746875622f696d616765732f34376266643264342d373132662d346465652d393331352d6639396336313162373539382e737667" width="16" height="16">
-        </button>
-        <button class="terminalButton">
-            <img src="" width="16" height="16">
-        </button>
-    </menu>
+    <header>
+        <h3 class="lheader">Links</h3>
+        <br>
+        <menu>
+            <button class="terminalButton">
+                <img src="https://camo.githubusercontent.com/12561cf74eda103dcb2bedafe0a89a693b6443039fe850a0b5414c221f2c4a05/68747470733a2f2f75706c6f61642e766563746f726c6f676f2e7a6f6e652f6c6f676f732f6769746875622f696d616765732f34376266643264342d373132662d346465652d393331352d6639396336313162373539382e737667" width="16" height="16">
+            </button>
+            <button class="terminalButton">
+                <img src="" width="16" height="16">
+            </button>
+        </menu>
+    </header>
+    
     <main>
-        
+        <div id="title">
+            <h1>weknow - No inspiration? No problem!</h1>
+            <p>Ever felt tired because you can't come up with something to do? We've all been there. Our mission is to stop lack of ideas - perminently</p>
+        </div>
     </main>
 </body>
 </html>
