--- a/aboutus.html
+++ b/aboutus.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Main site</title>
+    <title>About Us</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,12 +30,5 @@
             </button>
         </menu>
     </header>
-    
-    <main>
-        <div id="title">
-            <h1>whatnow. - No inspiration? No problem!</h1>
-            <p>Ever felt tired because you can't come up with something to do?<br> We've all been there. Our mission is to stop lack of ideas - permanently</p>
-        </div>
-    </main>
 </body>
 </html>
