--- a/button.html
+++ b/button.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Main site</title>
+    <title>Button board</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,12 +30,39 @@
             </button>
         </menu>
     </header>
-    
-    <main>
-        <div id="title">
-            <h1>whatnow. - No inspiration? No problem!</h1>
-            <p>Ever felt tired because you can't come up with something to do?<br> We've all been there. Our mission is to stop lack of ideas - permanently</p>
-        </div>
-    </main>
+    <br>
+    <button class="terminalButton" onclick="document.getElementById('clickbtn').innerText = 'Thanks'" id="clickbtn">Click me!</button>
+    <br><br>
+    <textarea class="codeshowcase" readonly cols="40" rows="31">
+/* 
+Button CSS:
+
+.terminalButton {
+    display: inline-block;
+    cursor: pointer;
+    box-shadow: 0px 5px #1f003f;
+    border-radius: 10px;
+    background-color: #7f00ff;
+    padding: 10px;
+    border: 0;
+    font-family: 'Ubuntu Mono', monospace;
+    font-weight: bold;
+    text-align: center;
+    position: relative;
+    margin-bottom: 2px;
+    top: 0px;
+}
+
+.terminalButton:hover {
+    background-color: #3f007f;
+}
+
+.terminalButton:active {
+    top: 5px;
+    box-shadow: 0px 2px #1f003f;
+    border-radius: 10px;
+    background-color: #3f007f;
+}
+*/</textarea>
 </body>
 </html>
