--- a/button.html
+++ b/button.html
@@ -10,8 +10,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/gif" href="./favicon.gif">
 
     <link rel="stylesheet" href="./terminal.css">
+
+    <script src="./easteregg.js"></script>
 </head>
 <body>
     <header>
@@ -33,7 +36,7 @@
     <br>
     <button class="terminalButton" onclick="document.getElementById('clickbtn').innerText = 'Thanks'" id="clickbtn">Click me!</button>
     <br><br>
-    <textarea class="codeshowcase" readonly cols="40" rows="31">
+    <textarea class="codeshowcase" readonly cols="42" rows="31">
 /* 
 Button CSS:
 
