--- a/aboutus.html
+++ b/aboutus.html
@@ -10,8 +10,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/gif" href="./favicon.gif">
 
     <link rel="stylesheet" href="./terminal.css">
+
+    <script src="./easteregg.js"></script>
 </head>
 <body>
     <header>
