--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/gif" href="./favicon.gif">
 
     <link rel="stylesheet" href="./terminal.css">
+
+    <script src="./easteregg.js"></script>
 </head>
 <body>
     <header>
@@ -36,6 +39,7 @@
             <h1>whatnow. - No inspiration? No problem!</h1>
             <p>Ever felt tired because you can't come up with something to do?<br> We've all been there. Our mission is to stop lack of ideas - permanently</p>
         </div>
+        <iframe width="384" height="216" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Our passion" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </main>
 </body>
 </html>
