--- a/proj.html
+++ b/proj.html
@@ -10,8 +10,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/gif" href="./favicon.gif">
 
     <link rel="stylesheet" href="./terminal.css">
+
+    <script src="./easteregg.js"></script>
 </head>
 <body>
     <header>
@@ -39,10 +42,12 @@
 
                     <canvas id="logorender" class="gridimg"></canvas>
                 </button>
-                <button class="gi" id="griditem_1,0">
+                <div class="gi" id="griditem_1,0" onclick="window.location = './button.html'" style="align-items: center;">
 
-                    <img class="gridimg" src="C:\Users\vehaa007\Desktop\pal-reis.png">
-                </button>
+                    <h1>Buttons</h1>
+                    <br>
+                    <p>I created all the buttons myself, using pure css & html</p>
+                </div>
                 <button class="gi" id="griditem_2,0">
 
                     <img class="gridimg" src="C:\Users\vehaa007\Desktop\pal-reis.png">
