--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h1>whatnow. - No inspiration? No problem!</h1>
             <p>Ever felt tired because you can't come up with something to do?<br> We've all been there. Our mission is to stop lack of ideas - permanently</p>
         </div>
-        <iframe width="384" height="216" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Our Passion" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="384" height="216" src="https://www.youtube.com/embed/dQw4w9WgXcQ?&autoplay=1" title="Our Passion" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </main>
 </body>
 </html>
